--- a/Backend/Pipfile
+++ b/Backend/Pipfile
@@ -14,6 +14,8 @@ flask-sqlalchemy = "*"
 psycopg2-binary = "*"
 flask-cors = "*"
 flask-migrate = "*"
+flask-login = "*"
+werkzeug = "*"
 
 [dev-packages]
 
