--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 node_modules
+.flaskenv
+
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+.env
+__pycache__/
+*.py[cod]
+.venv
+.DS_Store
+.vscode/
+.flaskenv
+.env_backup
