--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,8 +16,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0"
   },
