--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ dist-ssr
 *.sln
 *.sw?
 
-./src/util/keys.js
-./Backend/.flaskenv
-./Frontend/src/util/keys.js
-./Frontend/.env
+ 
+Backend/.flaskenv
+Frontend/src/util/keys.js
+Frontend/.env
