--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -3,7 +3,8 @@ blinker==1.6.2
 click==8.1.3
 dnspython==2.3.0
 email-validator==2.0.0.post2
-Flask==2.3.2
+# Flask==2.3.2
+Flask==2.0.1
 Flask-Cors==3.0.10
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
