--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -18,7 +18,8 @@ Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 psycopg2-binary==2.9.6
-python-dotenv==1.0.0
+# python-dotenv==1.0.0
+python-dotenv==0.14.0
 six==1.16.0
 SQLAlchemy==2.0.12
 typing_extensions==4.5.0
