--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -23,5 +23,6 @@ python-dotenv==0.14.0
 six==1.16.0
 SQLAlchemy==2.0.12
 typing_extensions==4.5.0
-Werkzeug==2.3.3
+# Werkzeug==2.3.3
+werkzeug==2.0.1
 WTForms==3.0.1
