--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -8,7 +8,7 @@ Flask==2.0.1
 Flask-Cors==3.0.10
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
-Flask-SQLAlchemy==3.0.3
+# Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 greenlet==2.0.2
 gunicorn==20.1.0
@@ -22,6 +22,7 @@ psycopg2-binary==2.9.6
 python-dotenv==0.14.0
 six==1.16.0
 SQLAlchemy==2.0.12
+flask-sqlalchemy==2.5.1
 typing_extensions==4.5.0
 # Werkzeug==2.3.3
 werkzeug==2.0.1
