--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "heroku-postbuild": "cd Frontend && npm install && npm run build"
+    "heroku-postbuild": "cd Frontend && npm install && npm run build",
+    "heroku-prebuild": "cd Frontend && npm install && npm run build"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
