--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,8 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "heroku-postbuild": "cd Frontend && npm install && npm run build",
-    "heroku-prebuild": "cd Frontend && npm install && npm run build"
+    "heroku-postbuild": "cd Frontend && npm install && npm run preview",
+    "heroku-prebuild": "cd Frontend && npm install && npm run build",
+    "start": "vite preview"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
