--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -51,4 +51,5 @@ werkzeug==2.0.1
 wtforms==2.3.3
 boto3==1.26.28
 email-validator==2.0.0.post2
+psycopg2-binary==2.9.6
 botocore==1.29.28 ; python_version >= '3.7'
